--- a/pkg/sql/opt/testutils/BUILD.bazel
+++ b/pkg/sql/opt/testutils/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//pkg/sql/parser",
         "//pkg/sql/sem/eval",
         "//pkg/sql/sem/tree",
+        "//pkg/sql/types",
         "@com_github_cockroachdb_errors//:errors",
     ],
 )
